[package]
name = "field_types"
version = "1.0.1"
description = "Some derive macros for deriving enums, corresponding to the fields of structs."
readme = "README.md"
repository = "https://github.com/XX/field_types"
license = "MIT"
authors = ["Alexander Mescheryakov <freecoder.xx@gmail.com>"]

[dependencies]
quote = "0.6"
syn = "0.15"
heck = "0.3"

[lib]
proc-macro = true
